--- a/platle/package.json
+++ b/platle/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
     "lucide-react": "^0.525.0",
+    "mongodb": "^6.17.0",
     "motion": "^12.23.0",
     "next": "15.3.5",
     "react": "^19.0.0",
