--- a/playtle_api/package.json
+++ b/playtle_api/package.json
@@ -19,6 +19,7 @@
     "eslint": "^9.30.1",
     "express": "^5.1.0",
     "i": "^0.3.7",
+    "igdb-api-types": "^0.2.0",
     "mongodb": "^6.17.0",
     "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
