--- a/playtle_api/package.json
+++ b/playtle_api/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.13",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "eslint": "^9.30.1",
     "express": "^5.1.0",
